Resolve Sonar findings and raise assert-core mutation coverage
Sonar (PR 1438): Stream.toList, extracted nested ternary, split
checkResidue and basisPrecedence to reduce complexity, moved
Invocation-only helpers into Invocation and processSelected into
ReadyStream, narrowed Throwable/Error catches to
RuntimeException|AssertionError, dropped the Blocker.observed field,
static-imported Mockito.when, Jupiter assertions in MetaTest, one static
@AfterAll in the example tests, and the flagged test hygiene items
(unused imports, redundant throws, method references, expected/actual
order, hoisted lambda invocations, nested TailFactory, fixture assertion).

The stderr diagnostics remain: SysOutTest documents why a logger is
unsuitable there.

assert-core PIT 91% -> 94% (699/741 killed, 18 uncovered) with tests for
the configuration guard on every fluent method, concurrent-configuration
requirements, concurrent context handling, a returning skip signal,
CorrelatedTail read limits, drain-on-close and bounded problem reports,
LogCollector close-failure retention and late-event draining, Actual
fluency and Precedence.size.